Добавил JwtTokenDTO и документацию к AuthController