@@ -1,5 +1,11 @@
 package ru.ezuykow.socialmediabackend.controllers;
 
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.support.DefaultMessageSourceResolvable;
@@ -14,18 +20,20 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import ru.ezuykow.socialmediabackend.dto.AuthDTO;
+import ru.ezuykow.socialmediabackend.dto.ErrorResponseDTO;
+import ru.ezuykow.socialmediabackend.dto.JwtTokenDTO;
 import ru.ezuykow.socialmediabackend.dto.UserDTO;
 import ru.ezuykow.socialmediabackend.entities.User;
 import ru.ezuykow.socialmediabackend.mappers.UserMapper;
 import ru.ezuykow.socialmediabackend.security.JWT.JWTUtil;
 import ru.ezuykow.socialmediabackend.services.AuthService;
 
-import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Collections;
 
 /**
  * @author ezuykow
  */
+@Tag(name = "Регистрация и аутентификация")
 @RestController
 @RequestMapping("/auth")
 @RequiredArgsConstructor
@@ -37,6 +45,15 @@ public class AuthController {
     private final AuthenticationManager authenticationManager;
 
     @PostMapping("/register")
+    @Operation(summary = "Зарегистрировать пользователя", description = "Возвращает токен аутентификации")
+    @ApiResponses({
+            @ApiResponse(responseCode = "200", description = "Пользователь зарегистрирован",
+                    content = {@Content(mediaType = "application/json",
+                            schema = @Schema(implementation = JwtTokenDTO.class))}),
+            @ApiResponse(responseCode = "400", description = "Некорректные регистрационные данные",
+                    content = {@Content(mediaType = "application/json",
+                            schema = @Schema(implementation = ErrorResponseDTO.class))})
+    })
     public ResponseEntity<?> register(@RequestBody @Valid UserDTO userDto, BindingResult bindingResult) {
 
         User user = userMapper.mapUserDtoToUser(userDto);
@@ -44,28 +61,40 @@ public class AuthController {
 
         if (bindingResult.hasErrors()) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body(Map.of("errors",
+                    .body(new ErrorResponseDTO(
                             bindingResult.getAllErrors().stream()
                                     .map(DefaultMessageSourceResolvable::getDefaultMessage)
-                                    .collect(Collectors.toList()))
+                                    .toList())
                     );
         }
 
         authService.register(user);
         String token = jwtUtil.generateToken(user.getUsername());
 
-        return ResponseEntity.ok(Map.of("jwt_token", token));
+        return ResponseEntity.ok(new JwtTokenDTO(token));
     }
 
     @PostMapping("/login")
-    public ResponseEntity<?> login(@RequestBody @Valid AuthDTO authDto, BindingResult bindingResult ) {
+    @Operation(summary = "Аутентифицировать пользователя", description = "Возвращает токен аутентификации")
+    @ApiResponses({
+            @ApiResponse(responseCode = "200", description = "Пользователь аутентифицирован",
+                    content = {@Content(mediaType = "application/json",
+                            schema = @Schema(implementation = JwtTokenDTO.class))}),
+            @ApiResponse(responseCode = "400", description = "Некорректные параметры",
+                    content = {@Content(mediaType = "application/json",
+                            schema = @Schema(implementation = ErrorResponseDTO.class))}),
+            @ApiResponse(responseCode = "403", description = "Неверные данные аутентификации",
+                    content = {@Content(mediaType = "application/json",
+                            schema = @Schema(implementation = ErrorResponseDTO.class))})
+    })
+    public ResponseEntity<?> login(@RequestBody @Valid AuthDTO authDto, BindingResult bindingResult) {
 
         if (bindingResult.hasErrors()) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body(Map.of("errors",
+                    .body(new ErrorResponseDTO(
                             bindingResult.getAllErrors().stream()
                                     .map(DefaultMessageSourceResolvable::getDefaultMessage)
-                                    .collect(Collectors.toList()))
+                                    .toList())
                     );
         }
 
@@ -75,10 +104,11 @@ public class AuthController {
         try {
             authenticationManager.authenticate(authToken);
         } catch (BadCredentialsException e) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Map.of("error", "incorrect credential!"));
+            return ResponseEntity.status(HttpStatus.FORBIDDEN)
+                    .body(new ErrorResponseDTO(Collections.singletonList("incorrect credential!")));
         }
 
         String token = jwtUtil.generateToken(authDto.getUsername());
-        return ResponseEntity.ok(Map.of("jwt_token", token));
+        return ResponseEntity.ok(new JwtTokenDTO(token));
     }
 }
